# git-vacuum

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  release.yml
crates/git-vacuum/: Cargo.toml
crates/git-vacuum-app/: Cargo.toml
crates/git-vacuum-app/src/: effects.rs  lib.rs  modals.rs  reduce.rs  state.rs  tabs.rs
crates/git-vacuum-core/: Cargo.toml
crates/git-vacuum-core/src/: error.rs  event.rs  lib.rs  util.rs
crates/git-vacuum-core/src/traits/: database.rs  git_ops.rs  github_api.rs  keyring_store.rs  mod.rs
crates/git-vacuum-core/src/types/: activity.rs  job.rs  mod.rs  org.rs  progress.rs  repo.rs  repo_source.rs  settings.rs  sync.rs  user.rs
crates/git-vacuum-db/: Cargo.toml
crates/git-vacuum-db/migrations/: 001_initial_schema.sql
crates/git-vacuum-db/src/: connection.rs  lib.rs  migrations.rs  queries.rs
crates/git-vacuum-db/src/migrations/: 001_initial_schema.sql
crates/git-vacuum-db/src/queries/: accounts.rs  mod.rs  repos.rs  settings.rs  stats.rs  sync_entries.rs  sync_runs.rs
crates/git-vacuum-git/: Cargo.toml
crates/git-vacuum-git/src/: lib.rs
crates/git-vacuum-github/: Cargo.toml
crates/git-vacuum-github/examples/: probe_list_my_repos.rs
crates/git-vacuum-github/src/: error.rs  lib.rs  mapping.rs
crates/git-vacuum-keyring/: Cargo.toml
crates/git-vacuum-keyring/src/: lib.rs
crates/git-vacuum-service/: Cargo.toml
crates/git-vacuum-service/src/: auth_service.rs  context.rs  discovery.rs  lib.rs  merge.rs  stats.rs  sync_engine.rs
crates/git-vacuum-service/src/sync_engine/: mod.rs  plan.rs  worker.rs
crates/git-vacuum-tui/: Cargo.toml
crates/git-vacuum-tui/src/: components.rs  input.rs  layout.rs  lib.rs  terminal.rs  theme.rs
crates/git-vacuum-tui/src/screens/: activity_log.rs  auth.rs  dashboard.rs  explorer.rs  mod.rs  settings.rs  sync_center.rs  welcome.rs
crates/git-vacuum/src/: config.rs  main.rs  wiring.rs
docs/design/: git-vacuum-architecture.md  git-vacuum-github-integration.md  git-vacuum-product-spec.md  git-vacuum-sqlite-schema.md  git-vacuum-sync-engine.md  git-vacuum-tui-ux-design.md  git-vacuum-workspace-structure.md  no-backend-rationale.md
