[package]
name = "git-vacuum-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
log.workspace = true
thiserror.workspace = true
chrono = "0.4"
async-trait = "0.1"
