[package]
name = "git-vacuum-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite persistence for git-vacuum"

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
