[package]
name = "git-vacuum-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
octocrab = "0.42"
http = "1"
tokio = { workspace = true, features = ["time", "macros"] }
serde.workspace = true
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log.workspace = true
thiserror.workspace = true
async-trait = "0.1"
