[package]
name = "git-vacuum-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GitHub API adapter for git-vacuum"

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
octocrab = { version = "0.42", features = ["rustls-ring", "tokio", "default-client"] }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
http = "1"
