[package]
name = "git-vacuum-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OS credential storage adapter for git-vacuum"

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
thiserror = { workspace = true }
log = { workspace = true }
