[package]
name = "git-vacuum-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
futures = "0.3"
log.workspace = true
thiserror.workspace = true
serde_json = "1"

chrono = "0.4"

async-trait = "0.1"

