[package]
name = "git-vacuum-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ratatui terminal UI for git-vacuum"

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
git-vacuum-app = { path = "../git-vacuum-app" }
ratatui = { version = "0.29", features = ["serde"] }
crossterm = "0.28"
unicode-width = "0.2"
log = { workspace = true }
