[package]
name = "git-vacuum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
git-vacuum-db = { path = "../git-vacuum-db" }
git-vacuum-github = { path = "../git-vacuum-github" }
git-vacuum-git = { path = "../git-vacuum-git" }
git-vacuum-keyring = { path = "../git-vacuum-keyring" }
git-vacuum-service = { path = "../git-vacuum-service" }
git-vacuum-app = { path = "../git-vacuum-app" }
git-vacuum-tui = { path = "../git-vacuum-tui" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
crossterm = "0.28"
log.workspace = true
env_logger = "0.11"
dirs = "6"
anyhow = "1"
