[package]
name = "git-vacuum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "git-vacuum binary"

[[bin]]
name = "git-vacuum"
path = "src/main.rs"

[dependencies]
git-vacuum-core = { path = "../git-vacuum-core" }
git-vacuum-app = { path = "../git-vacuum-app" }
git-vacuum-service = { path = "../git-vacuum-service" }
git-vacuum-tui = { path = "../git-vacuum-tui" }
git-vacuum-db = { path = "../git-vacuum-db" }
git-vacuum-github = { path = "../git-vacuum-github" }
git-vacuum-git = { path = "../git-vacuum-git" }
git-vacuum-keyring = { path = "../git-vacuum-keyring" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
log = { workspace = true }
env_logger = "0.11"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1"
